--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
+    "watch": "jest --watch",
     "dev": "webpack serve --open --config webpack.dev.js",
     "build": "webpack --config webpack.build.js"
   },
@@ -24,6 +26,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
     "prettier": "^3.2.2",
     "style-loader": "^3.3.4",
     "webpack": "^5.89.0",
