--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "watch": "jest --watch",
+    "watch": "jest --watchAll",
     "dev": "webpack serve --open --config webpack.dev.js",
     "build": "webpack --config webpack.build.js"
   },
